Admin and Create a new list screens!

--- a/dada/templates/edit_type_screen.tmpl
+++ b/dada/templates/edit_type_screen.tmpl
@@ -169,8 +169,6 @@
 				rows="10" cols="50" ><!-- tmpl_var list_settings.mailing_list_message_html escape=HTML --></textarea> 
 		</div>
 		<div  class="content tab-title" id="mailing_list_message_plaintext_version"> 
-
-		
 			<textarea 
 				name="mailing_list_message"
 				id="mailing_list_message" 
@@ -178,6 +176,7 @@
 				cols="50" ><!-- tmpl_var list_settings.mailing_list_message escape=HTML --></textarea> 
 			
 		</div> 
+	</div>
 
 
 
