--- a/dada/templates/plugins/tracker/individual_country_geoip_report_table.tmpl
+++ b/dada/templates/plugins/tracker/individual_country_geoip_report_table.tmpl
@@ -4,8 +4,8 @@
 <!-- tmpl_unless chrome --> 
 
 	<div>
-	<div style="max-height: 400px; overflow: auto; border:1px solid black overflow-y: scroll; overflow-x: hidden;">
-	<p style="text-align:right">
+		<div style="max-height: 400px; overflow: auto; border:1px solid black overflow-y: scroll; overflow-x: hidden;">
+			<p class="text-right">
 		<a href="<!-- tmpl_var Plugin_URL -->?prm=individual_country_geoip_report_table&mid=<!-- tmpl_var mid -->&country=<!-- tmpl_var country -->&type=ALL&chrome=1" target="_blank">
 			View Report in a New Window &gt;&gt;
 		</a>
