--- a/dada/templates/admin_screen.tmpl
+++ b/dada/templates/admin_screen.tmpl
@@ -3,110 +3,77 @@
 <!-- tmpl_set name="title" value="Administration" --> 
 <!-- tmpl_set name="show_profile_widget" value="0" --> 
 
+<h1>&nbsp;</h1>
+<div class="row">
+	<div class="small-10 medium-5 large-4 small-centered medium-centered large-centered columns">
 
- <h1>
-  Enter Your List Control Panel
- </h1>
- 
-<!-- tmpl_if logged_in_list_name --> 
+		<ul class="tabs" data-tab>
+			<li class="tab-title active">
+				<a href="#logintab" target="_self">
+					Login
+				</a>
+			</li>
+            <li class="tab-title">
+				<a href="#createtab" target="_self">
+					Create
+				</a>
+			</li>
+        </ul>
+		
+		<div class="tabs-content">
+			<div  class="content tab-title active"id="logintab">
+				<!-- LOGIN WIDGET! -->
+					<!-- tmpl_if expr="login_widget eq 'text_box'" -->
+						<!-- tmpl_include name="text_box_login_form.tmpl" -->
+					<!-- tmpl_else -->
+							<!-- tmpl_include name="list_popup_login_form.tmpl" -->
+					<!-- /tmpl_if -->
+				<!-- END LOGIN WIDGET -->
+			</div>
+						
+			<div  class="content tab-title" id="createtab">
+				<!-- tmpl_if expr="list_max_reached == 1" -->
+					<div class="alert-box info radius">
+						You have reached the maximum number of Mailing Lists that can be created.
+					</div>
+				<!-- tmpl_else -->
+					<form action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
+						<input type="hidden" name="flavor" value="new_list" >
+						<!-- tmpl_if DISABLE_OUTSIDE_LOGINS --> 
+							<input type="hidden" name="auth_state" value="<!-- tmpl_var auth_state -->" > 
+						<!--/tmpl_if--> 
+						<div class="row">
+							<div class="small-12 columns">
+								<label for="root_password">
+									<!-- tmpl_var name="PROGRAM_NAME" --> Root Password
+								</label>
+								<input 
+									type="password" 
+									name="root_password" 
+									id="root_password" 
+									maxlength="24"
+								>
+							</div>
+						</div>
+						<div class="row">
+							<div class="small-12 columns">
+								<input 
+									type="submit" 
+									class="plain expand button" 
+									value="Create a New Mailing List"
+								>
+							</div>
+						</div>
+					</form>
+				<!-- /tmpl_if -->
+			</div>
+		</div>
+	</div> 
+</div> 
 
-    <div class="login_message">
-     
-     <p>
-      Currently logged into: 
-     </p> 
-     
-     <ul>
-      <li> 
-      <a href="<!-- tmpl_var DEFAULT_ADMIN_SCREEN -->">
-       <!-- tmpl_var logged_in_list_name -->
-      </a>
-     </li> 
-     </ul> 
-     
-      
-      <p>
-       [<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=logout">Logout</a>] 
-      </p>
-      
-     </div> 
-     <div class="floatclear"></div>
-
-
-<!--tmpl_else--> 
-
-    <!-- tmpl_if expr="login_widget eq 'text_box'" -->
-        <!-- tmpl_include name="text_box_login_form.tmpl" -->
-    <!-- tmpl_else -->
-        <!-- tmpl_include name="list_popup_login_form.tmpl" -->
-    <!-- /tmpl_if -->
-    
-    <p>
-     Please be sure 
-     <strong>
-      cookies and JavaScript 
-     </strong>
-     are enabled in your browser.
-    </p>
-
-<!--/tmpl_if--> 
-
-
-<!-- tmpl_unless no_show_create_new_list --> 
-    
-    
-    
-    <h1>
-     Create a New Mailing List
-    </h1>
-    
-    <!-- tmpl_if expr="list_max_reached == 1" -->
-        
-		 <div class="alert-box info radius">
-		    <p>
-	         You have reached the maximum number of Mailing Lists that can be created.
-	        </p>
+<!-- tmpl_if expr="list_max_reached == 1" -->
+	<!-- tmpl_include upgrade_to_pro_dada.tmpl -->
+<!-- /tmpl_if -->
 	
-        </div> 
-		<!-- tmpl_include upgrade_to_pro_dada.tmpl -->
 
-    <!-- tmpl_else -->
-        
-        <p>
-         You will need to know the <!-- tmpl_var name="PROGRAM_NAME" -->
-         Root Password to create a new Mailing List.
-        </p>
-        
-        <form action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
-         <input type="hidden" name="flavor" value="new_list" >
-         <table  align="center">
-          <tr>
-           <td colspan="2">
-            <p>
-             Type in your 
-              <label for="root_password">
-               <!-- tmpl_var name="PROGRAM_NAME" --> Root Password</label>:
-            </p>
-           </td>
-          </tr>
-          <tr>
-           <td>
-            <input type="password" name="root_password" id="root_password" maxlength="24" >
-           </td>
-           <td>
-            <input type="submit" class="plain button" value="Create a New Mailing List..." >
-           </td>
-          </tr>
-         </table>
-         
-         <!-- tmpl_if DISABLE_OUTSIDE_LOGINS --> 
-             <input type="hidden" name="auth_state" value="<!-- tmpl_var auth_state -->" > 
-         <!--/tmpl_if--> 
-    
-        </form>
-        
-    <!-- /tmpl_if -->
-
-
-<!--/tmpl_unless--> 
 <!-- end admin_screen.tmpl -->
