--- a/dada/templates/list_template.tmpl
+++ b/dada/templates/list_template.tmpl
@@ -42,10 +42,12 @@
 <div class="row">
    <div class="small-12">
 	   
-	   <h1>
-		   <!-- tmpl_var title -->
-	   </h1>
-	   
+	   <!-- tmpl_if comment -->
+		   <h1>
+			   <!-- tmpl_var title -->
+		   </h1>
+		<!-- /tmpl_if --> 
+		
 		<!-- tmpl_if list_settings.list --> 
 			<!-- tmpl_if subscribed_to_list --> 
 				<div class="alert-box info radius">
@@ -78,6 +80,10 @@
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/foundation.min.js"></script>
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/foundation/foundation.offcanvas.js"></script>
 
+<script>
+	$(document).foundation();
+</script>
+	
 	
  </body>
 </html>
