--- a/dada/templates/congrats_screen.tmpl
+++ b/dada/templates/congrats_screen.tmpl
@@ -36,12 +36,12 @@
    agree not to use <!-- tmpl_var PROGRAM_NAME --> for unsolicited email (SPAM):
   </strong>
  </p>
- <p align="center">
+ <p class="text-center">
   <div style="width:95%;height:150px;overflow:auto;border:1px solid black;padding:5px;margin:5px">
    <!-- tmpl_include name="gpl.tmpl" -->
   </div>
  </p>
- <p align="center">
+ <p class="text-center">
   <div style="width:95%;height:150px;overflow:auto;border:1px solid black;padding:5px;margin:5px">
    <!-- tmpl_include name="no_spam.tmpl" -->
   </div>
