--- a/dada/templates/error_invalid_password_screen.tmpl
+++ b/dada/templates/error_invalid_password_screen.tmpl
@@ -98,7 +98,7 @@
 	<!-- /tmpl_if --> 
 
 
- <p align="center">
+ <p class="text-center">
   <input type="submit" class="cautionary button" value="Reset Your Mailing List Password" >
  </p>
 </form> 
