--- a/dada/templates/list_login_form.tmpl
+++ b/dada/templates/list_login_form.tmpl
@@ -16,9 +16,9 @@
 	Your <!-- tmpl_var PROGRAM_NAME --> Root Password will work for all Mailing Lists. 
  </p>
 
- <table  align="center" cellpadding="5">
+ <table  class="text-center" cellpadding="5">
   <tr>
-   <td valign="top">
+   <td >
     <p>
      Enter in your
      <label for="admin_password">
@@ -28,7 +28,7 @@
    </td>
   </tr>
   <tr>
-   <td valign="top" align="right">
+   <td  align="right">
     <input type="hidden"   name="admin_list" value="<!-- tmpl_var list_settings.list -->" style="vertical-align:top;" ><!-- HACK: vertical-align is for IE -->
     <input type="password" name="admin_password" id="admin_password" size="16" maxlength="24" >
     <input type="submit" class="plain button" value="Login" >
