--- a/dada/templates/mass_update_profile_form.tmpl
+++ b/dada/templates/mass_update_profile_form.tmpl
@@ -26,7 +26,7 @@
                 <td width="20"> 
                     <input type="checkbox" id="update_<!-- tmpl_var name -->"  name="update.<!-- tmpl_var name -->" value="1" for="">
                 </td> 
-                 <td align="right"> 
+                 <td class="text=right">  
                   <p>
                    <label for="update_<!-- tmpl_var name -->" >
                     <!-- tmpl_var label -->:
