--- a/dada/templates/plugins/tracker/country_geoip_table.tmpl
+++ b/dada/templates/plugins/tracker/country_geoip_table.tmpl
@@ -8,8 +8,8 @@
 	  <table  id="sortable_table_<!-- tmpl_var type -->" class="stripedtable tablesorter" style="width:325px">
        <thead> 			
 	    <tr> 
-	     <th align="left">Country</th> 
-	     <th  align="right"><!-- tmpl_var label --></th> 
+	     <th >Country</th> 
+	     <th  class="text-right"><!-- tmpl_var label --></th> 
 	    </tr> 
        </thead> 
        <tbody>
