--- a/dada/templates/text_box_login_form.tmpl
+++ b/dada/templates/text_box_login_form.tmpl
@@ -26,7 +26,7 @@
   access your control panel.
  </p>
 
- <table  align="center" cellpadding="5">
+ <table  class="text-center" cellpadding="5">
   <tr>
    <td>
     <p>
@@ -51,12 +51,12 @@
    </td>
   </tr>
   <tr>
-   <td valign="top">
+   <td >
     <p>
      <input type="text" name="admin_list" id="admin_list" size="16" >
     </p>
    </td>
-   <td valign="top">
+   <td >
     <input type="password" name="admin_password" size="16" style="vertical-align:top;" maxlength="24" ><!-- HACK: vertical-align is for IE -->
     <input type="submit" class="plain button" value="Login" >
    </td>
