--- a/dada/templates/admin_screen.tmpl
+++ b/dada/templates/admin_screen.tmpl
@@ -3,7 +3,13 @@
 <!-- tmpl_set name="title" value="Administration" --> 
 <!-- tmpl_set name="show_profile_widget" value="0" --> 
 
-<h1>&nbsp;</h1>
+
+<!-- tmpl_if invalid_login -->
+	<div class="alert-box error radius">
+		Login is invalid/session expired, please login in, below:
+	</div>
+<!-- /tmpl_if -->
+
 <div class="row">
 	<div class="small-10 medium-5 large-4 small-centered medium-centered large-centered columns">
 
@@ -22,50 +28,11 @@
 		
 		<div class="tabs-content">
 			<div  class="content tab-title active"id="logintab">
-				<!-- LOGIN WIDGET! -->
-					<!-- tmpl_if expr="login_widget eq 'text_box'" -->
-						<!-- tmpl_include name="text_box_login_form.tmpl" -->
-					<!-- tmpl_else -->
-							<!-- tmpl_include name="list_popup_login_form.tmpl" -->
-					<!-- /tmpl_if -->
-				<!-- END LOGIN WIDGET -->
+				<!-- tmpl_include control_panel_login_form.tmpl -->
 			</div>
 						
 			<div  class="content tab-title" id="createtab">
-				<!-- tmpl_if expr="list_max_reached == 1" -->
-					<div class="alert-box info radius">
-						You have reached the maximum number of Mailing Lists that can be created.
-					</div>
-				<!-- tmpl_else -->
-					<form action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
-						<input type="hidden" name="flavor" value="new_list" >
-						<!-- tmpl_if DISABLE_OUTSIDE_LOGINS --> 
-							<input type="hidden" name="auth_state" value="<!-- tmpl_var auth_state -->" > 
-						<!--/tmpl_if--> 
-						<div class="row">
-							<div class="small-12 columns">
-								<label for="root_password">
-									<!-- tmpl_var name="PROGRAM_NAME" --> Root Password
-								</label>
-								<input 
-									type="password" 
-									name="root_password" 
-									id="root_password" 
-									maxlength="24"
-								>
-							</div>
-						</div>
-						<div class="row">
-							<div class="small-12 columns">
-								<input 
-									type="submit" 
-									class="plain expand button" 
-									value="Create a New Mailing List"
-								>
-							</div>
-						</div>
-					</form>
-				<!-- /tmpl_if -->
+				<!-- tmpl_include create_new_mailing_list_form.tmpl -->
 			</div>
 		</div>
 	</div> 
@@ -74,6 +41,6 @@
 <!-- tmpl_if expr="list_max_reached == 1" -->
 	<!-- tmpl_include upgrade_to_pro_dada.tmpl -->
 <!-- /tmpl_if -->
-	
+
 
 <!-- end admin_screen.tmpl -->
