--- a/dada/templates/edit_html_type_screen.tmpl
+++ b/dada/templates/edit_html_type_screen.tmpl
@@ -128,7 +128,7 @@
    </legend>    
    
 <table class="responsive" width="100%">
- <tr align="center">
+ <tr class="text-center">
   <th>
     This Tag
   </th>
