--- a/dada/templates/list_popup_login_form.tmpl
+++ b/dada/templates/list_popup_login_form.tmpl
@@ -33,7 +33,7 @@
 			<!-- tmpl_var name="list_popup_menu" -->
 			<!-- tmpl_if show_other_link --> 
 				<a 
-					href="<!-- tmpl_var name="PROGRAM_URL" -->?flavor=<!-- tmpl_var ADMIN_FLAVOR_NAME -->;login_widget=text_box"
+					href="<!-- tmpl_var name="PROGRAM_URL" -->?flavor=<!-- tmpl_var ADMIN_FLAVOR_NAME -->&login_widget=text_box"
 				>
 					other...
 				</a>
