Note to myself.

--- a/dada/templates/admin_screen.tmpl
+++ b/dada/templates/admin_screen.tmpl
@@ -1,5 +1,16 @@
 <!-- begin admin_screen.tmpl -->
 
+
+
+
+<!-- 
+Maybe split the screen in two, when there's a invalid password, one side shows the login/create forms, the other, the reset form, 
+-->
+
+
+
+
+
 <!-- tmpl_set name="title" value="Administration" --> 
 <!-- tmpl_set name="show_profile_widget" value="0" --> 
 
